// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditScanConfigDialog component tests should render dialog 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.c36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c45 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 {
  margin-left: -5px;
}

.c39>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c39>* {
  margin-left: 5px;
}

.c38 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c26 {
  cursor: pointer;
}

.c27 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c27 * {
  height: inherit;
  width: inherit;
}

.c28 {
  overflow: hidden;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c46 {
  overflow: hidden;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  display: none;
  height: 0;
}

.c19 {
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #e5e5e5;
  position: relative;
}

.c20 {
  margin: 0 0 1px 0;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c23 {
  word-break: break-all;
  min-width: 100px;
}

.c24 {
  margin-left: 3px;
  margin-top: -2px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102, 102, 102, 0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c59 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c58 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient(     -45deg,     transparent,     transparent 2px,     #000 2px,     #000 3px   );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #7F7F7F;
  border-radius: 3px;
  border: 1px solid #7F7F7F;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #074320;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 :hover {
  border: 1px solid #074320;
}

.c6 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c6 * {
  height: inherit;
  width: inherit;
}

.c55 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c55:focus,
.c55:hover {
  border: 1px solid #4C4C4C;
}

.c55:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c55[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c55 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c55:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c56 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c57 {
  border: 1px solid #7F7F7F;
  color: #fff;
  background: #11ab51;
}

.c57 :hover {
  color: #074320;
  background: #A1DDBA;
}

.c53 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #e5e5e5;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
}

.c54 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #7F7F7F;
  color: #fff;
  font-weight: bold;
  background: #11ab51;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: grab;
}

.c9 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c8 {
  overflow: hidden;
  height: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c12 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c14 {
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c17 {
  color: #c12c30;
  font-weight: bold;
  font-size: 19px;
  padding-bottom: 1px;
  padding-left: 4px;
  display: none;
}

.c30 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c48 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: fixed;
  width: 100%;
}

.c31 th,
.c31 td {
  padding: 4px 10px;
  border-bottom: 1px solid #e5e5e5;
}

.c31 tfoot tr {
  background: #fff;
}

.c31 tfoot tr td {
  border-bottom: 1px solid #e5e5e5;
}

.c32 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
}

.c32 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c33 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #e5e5e5;
  font-weight: bold;
}

.c34 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #e5e5e5;
  font-weight: bold;
  width: 9em;
}

.c49 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #e5e5e5;
  font-weight: bold;
  width: 30%;
}

.c50 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #e5e5e5;
  font-weight: bold;
  width: 10%;
}

.c15 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #4C4C4C;
  background-color: #fff;
  background-image: none;
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  padding: 1px 8px;
}

.c15:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c47 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c40 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: normal;
  cursor: pointer;
}

.c41 {
  font-family: inherit;
  font-size: inherit;
  padding: 0;
  margin: 0;
  margin-left: 10px;
  line-height: normal;
  width: auto;
  height: auto;
}

.c42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c51 {
  overflow-wrap: break-word;
}

@media print {
  .c25 {
    display: none;
  }
}

@media print {
  .c30 {
    border-collapse: collapse;
  }
}

@media print {
  .c48 {
    border-collapse: collapse;
  }
}

@media screen {
  .c31>tbody:nth-of-type(even),
  .c31>tbody:only-of-type>tr:nth-of-type(even) {
    background: #f3f3f3;
  }

  .c31>tbody:not(:only-of-type):hover,
  .c31>tbody:only-of-type>tr:hover {
    background: #e5e5e5;
  }
}

@media print {
  .c32 {
    border-bottom: 1px solid black;
  }

  .c32 a,
  .c32 a:hover {
    -webkit-text-decoration: none;
    text-decoration: none;
    color: #000;
  }
}

@media print {
  .c33 {
    color: #000;
    font-size: 1.2em;
    background-color: transparent;
    font-weight: bold;
  }
}

@media print {
  .c34 {
    color: #000;
    font-size: 1.2em;
    background-color: transparent;
    font-weight: bold;
  }
}

@media print {
  .c49 {
    color: #000;
    font-size: 1.2em;
    background-color: transparent;
    font-weight: bold;
  }
}

@media print {
  .c50 {
    color: #000;
    font-size: 1.2em;
    background-color: transparent;
    font-weight: bold;
  }
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Edit Scan Config
              </span>
              <div
                class="c5 c6"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c7 c8"
            >
              <div
                class="c9"
                data-testid="save-dialog-content"
              >
                <div
                  class="c10"
                >
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                    >
                      <input
                        class="c15 c16"
                        name="name"
                        size="30"
                        type="text"
                        value="Config"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                    >
                      <input
                        class="c15 c16"
                        name="comment"
                        size="30"
                        type="text"
                        value="bar"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <section>
                    <div
                      class="c18 c19 section-header"
                    >
                      <h2
                        class="c20 c21"
                      >
                        <div
                          class="c22 c23"
                        >
                          Edit Network Vulnerability Test Families (4)
                        </div>
                      </h2>
                      <div
                        class="c3"
                      >
                        <div
                          class="c13 c24"
                        >
                          <span
                            class="c25 c26 c27 section-fold-icon"
                            data-testid="svg-icon"
                            title="Fold"
                          >
                            <svg
                              title="Fold"
                            >
                              unfold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c28"
                    >
                      <div
                        class="c29"
                      >
                        <table
                          class="c30 c31"
                        >
                          <thead
                            class="c32"
                          >
                            <tr>
                              <th
                                class="c33"
                              >
                                <div
                                  class="c13"
                                >
                                  Family
                                </div>
                              </th>
                              <th
                                class="c33"
                              >
                                <div
                                  class="c13"
                                >
                                  NVTs selected
                                </div>
                              </th>
                              <th
                                class="c33"
                              >
                                <div
                                  class="c13"
                                >
                                  Trend
                                </div>
                              </th>
                              <th
                                class="c34"
                              >
                                <div
                                  class="c13"
                                >
                                  Select all NVTs
                                </div>
                              </th>
                              <th
                                class="c33"
                              >
                                <div
                                  class="c35"
                                >
                                  Actions
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td>
                                <div
                                  class="c10"
                                >
                                  family1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c36"
                                >
                                  1 of 1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c37"
                                >
                                  <div
                                    class="c13 c38"
                                  >
                                    <div
                                      class="c13 c39"
                                    >
                                      <label
                                        class="c40"
                                      >
                                        <div
                                          class="c13 c38"
                                        >
                                          <div
                                            class="c13 c39"
                                          >
                                            <input
                                              checked=""
                                              class="c41 c42"
                                              data-testid="radio-input"
                                              name="family1"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c25 c27"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c40"
                                      >
                                        <div
                                          class="c13 c38"
                                        >
                                          <div
                                            class="c13 c39"
                                          >
                                            <input
                                              class="c41 c42"
                                              data-testid="radio-input"
                                              name="family1"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c25 c27"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c43"
                                >
                                  <label
                                    class="c40"
                                  >
                                    <div
                                      class="c13 c38"
                                    >
                                      <div
                                        class="c13 c39"
                                      >
                                        <input
                                          checked=""
                                          class="c41 c44"
                                          name="family1"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c45"
                                >
                                  <span
                                    class="c25 c26 c27"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg
                                      title="Edit Scan Config Family"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td>
                                <div
                                  class="c10"
                                >
                                  family2
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c36"
                                >
                                  2 of 4
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c37"
                                >
                                  <div
                                    class="c13 c38"
                                  >
                                    <div
                                      class="c13 c39"
                                    >
                                      <label
                                        class="c40"
                                      >
                                        <div
                                          class="c13 c38"
                                        >
                                          <div
                                            class="c13 c39"
                                          >
                                            <input
                                              class="c41 c42"
                                              data-testid="radio-input"
                                              name="family2"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c25 c27"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c40"
                                      >
                                        <div
                                          class="c13 c38"
                                        >
                                          <div
                                            class="c13 c39"
                                          >
                                            <input
                                              checked=""
                                              class="c41 c42"
                                              data-testid="radio-input"
                                              name="family2"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c25 c27"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c43"
                                >
                                  <label
                                    class="c40"
                                  >
                                    <div
                                      class="c13 c38"
                                    >
                                      <div
                                        class="c13 c39"
                                      >
                                        <input
                                          class="c41 c44"
                                          name="family2"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c45"
                                >
                                  <span
                                    class="c25 c26 c27"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg
                                      title="Edit Scan Config Family"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td>
                                <div
                                  class="c10"
                                >
                                  family3
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c36"
                                >
                                  0 of 2
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c37"
                                >
                                  <div
                                    class="c13 c38"
                                  >
                                    <div
                                      class="c13 c39"
                                    >
                                      <label
                                        class="c40"
                                      >
                                        <div
                                          class="c13 c38"
                                        >
                                          <div
                                            class="c13 c39"
                                          >
                                            <input
                                              class="c41 c42"
                                              data-testid="radio-input"
                                              name="family3"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c25 c27"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c40"
                                      >
                                        <div
                                          class="c13 c38"
                                        >
                                          <div
                                            class="c13 c39"
                                          >
                                            <input
                                              checked=""
                                              class="c41 c42"
                                              data-testid="radio-input"
                                              name="family3"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c25 c27"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c43"
                                >
                                  <label
                                    class="c40"
                                  >
                                    <div
                                      class="c13 c38"
                                    >
                                      <div
                                        class="c13 c39"
                                      >
                                        <input
                                          class="c41 c44"
                                          name="family3"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c45"
                                >
                                  <span
                                    class="c25 c26 c27"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg
                                      title="Edit Scan Config Family"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td>
                                <div
                                  class="c10"
                                >
                                  family4
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c36"
                                >
                                  0 of 6
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c37"
                                >
                                  <div
                                    class="c13 c38"
                                  >
                                    <div
                                      class="c13 c39"
                                    >
                                      <label
                                        class="c40"
                                      >
                                        <div
                                          class="c13 c38"
                                        >
                                          <div
                                            class="c13 c39"
                                          >
                                            <input
                                              class="c41 c42"
                                              data-testid="radio-input"
                                              name="family4"
                                              type="radio"
                                              value="1"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Dynamic"
                                        class="c25 c27"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_more.svg
                                        </svg>
                                      </span>
                                      <label
                                        class="c40"
                                      >
                                        <div
                                          class="c13 c38"
                                        >
                                          <div
                                            class="c13 c39"
                                          >
                                            <input
                                              checked=""
                                              class="c41 c42"
                                              data-testid="radio-input"
                                              name="family4"
                                              type="radio"
                                              value="0"
                                            />
                                          </div>
                                        </div>
                                      </label>
                                      <span
                                        alt="Static"
                                        class="c25 c27"
                                        data-testid="svg-icon"
                                      >
                                        <svg>
                                          trend_nochange.svg
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c43"
                                >
                                  <label
                                    class="c40"
                                  >
                                    <div
                                      class="c13 c38"
                                    >
                                      <div
                                        class="c13 c39"
                                      >
                                        <input
                                          class="c41 c44"
                                          name="family4"
                                          type="checkbox"
                                        />
                                      </div>
                                    </div>
                                  </label>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c45"
                                >
                                  <span
                                    class="c25 c26 c27"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config Family"
                                  >
                                    <svg
                                      title="Edit Scan Config Family"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                  <section>
                    <div
                      class="c18 c19 section-header"
                    >
                      <h2
                        class="c20 c21"
                      >
                        <div
                          class="c22 c23"
                        >
                          Edit Scanner Preferences (1)
                        </div>
                      </h2>
                      <div
                        class="c3"
                      >
                        <div
                          class="c13 c24"
                        >
                          <span
                            class="c25 c26 c27 section-fold-icon"
                            data-testid="svg-icon"
                            title="Unfold"
                          >
                            <svg
                              title="Unfold"
                            >
                              fold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c46"
                    >
                      <div
                        class="c29"
                      >
                        <table
                          class="c30 c31"
                        >
                          <thead
                            class="c32"
                          >
                            <tr>
                              <th
                                class="c33"
                              >
                                <div
                                  class="c13"
                                >
                                  Name
                                </div>
                              </th>
                              <th
                                class="c33"
                              >
                                <div
                                  class="c13"
                                >
                                  New Value
                                </div>
                              </th>
                              <th
                                class="c33"
                              >
                                <div
                                  class="c13"
                                >
                                  Default Value
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td>
                                <div
                                  class="c10"
                                >
                                  Scanner Preference 1
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c10"
                                >
                                  <input
                                    class="c15 c47"
                                    name="scannerpref0"
                                    type="text"
                                    value="0"
                                  />
                                  <div
                                    class="c17"
                                    data-testid="error-marker"
                                  >
                                    ×
                                  </div>
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c10"
                                />
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                  <section>
                    <div
                      class="c18 c19 section-header"
                    >
                      <h2
                        class="c20 c21"
                      >
                        <div
                          class="c22 c23"
                        >
                          Network Vulnerability Test Preferences (3)
                        </div>
                      </h2>
                      <div
                        class="c3"
                      >
                        <div
                          class="c13 c24"
                        >
                          <span
                            class="c25 c26 c27 section-fold-icon"
                            data-testid="svg-icon"
                            title="Unfold"
                          >
                            <svg
                              title="Unfold"
                            >
                              fold.svg
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c46"
                    >
                      <div
                        class="c29"
                      >
                        <table
                          class="c48 c31"
                        >
                          <thead
                            class="c32"
                          >
                            <tr>
                              <th
                                class="c49"
                              >
                                <div
                                  class="c13"
                                >
                                  NVT
                                </div>
                              </th>
                              <th
                                class="c49"
                              >
                                <div
                                  class="c13"
                                >
                                  Name
                                </div>
                              </th>
                              <th
                                class="c49"
                              >
                                <div
                                  class="c13"
                                >
                                  Value
                                </div>
                              </th>
                              <th
                                class="c50"
                              >
                                <div
                                  class="c35"
                                >
                                  Actions
                                </div>
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class=""
                          >
                            <tr>
                              <td
                                class="c51"
                              >
                                <div
                                  class="c10"
                                >
                                  preference0
                                </div>
                              </td>
                              <td
                                class="c51"
                              >
                                <div
                                  class="c10"
                                >
                                  preference1
                                </div>
                              </td>
                              <td
                                class="c51"
                              >
                                <div
                                  class="c10"
                                >
                                  3
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c45"
                                >
                                  <span
                                    class="c25 c26 c27"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config NVT Details"
                                  >
                                    <svg
                                      title="Edit Scan Config NVT Details"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class="c51"
                              >
                                <div
                                  class="c10"
                                >
                                  preference1
                                </div>
                              </td>
                              <td
                                class="c51"
                              >
                                <div
                                  class="c10"
                                >
                                  preference2
                                </div>
                              </td>
                              <td
                                class="c51"
                              >
                                <div
                                  class="c10"
                                >
                                  4
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c45"
                                >
                                  <span
                                    class="c25 c26 c27"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config NVT Details"
                                  >
                                    <svg
                                      title="Edit Scan Config NVT Details"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr>
                              <td
                                class="c51"
                              >
                                <div
                                  class="c10"
                                >
                                  preference2
                                </div>
                              </td>
                              <td
                                class="c51"
                              >
                                <div
                                  class="c10"
                                >
                                  preference
                                </div>
                              </td>
                              <td
                                class="c51"
                              >
                                <div
                                  class="c10"
                                >
                                  5
                                </div>
                              </td>
                              <td>
                                <div
                                  class="c45"
                                >
                                  <span
                                    class="c25 c26 c27"
                                    data-testid="svg-icon"
                                    title="Edit Scan Config NVT Details"
                                  >
                                    <svg
                                      title="Edit Scan Config NVT Details"
                                    >
                                      edit.svg
                                    </svg>
                                  </span>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="c52 c53 c54"
            >
              <button
                class="c55 c56 c57"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c55 c56 c57"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c58"
          >
            <div
              class="c59"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`EditScanConfigDialog component tests should render dialog for config in use 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102, 102, 102, 0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c26 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c25 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient(     -45deg,     transparent,     transparent 2px,     #000 2px,     #000 3px   );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #7F7F7F;
  border-radius: 3px;
  border: 1px solid #7F7F7F;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #074320;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 :hover {
  border: 1px solid #074320;
}

.c6 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c6 * {
  height: inherit;
  width: inherit;
}

.c22 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c22:focus,
.c22:hover {
  border: 1px solid #4C4C4C;
}

.c22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c22[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c22 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c22:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  border: 1px solid #7F7F7F;
  color: #fff;
  background: #11ab51;
}

.c24 :hover {
  color: #074320;
  background: #A1DDBA;
}

.c20 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #e5e5e5;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
}

.c21 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #7F7F7F;
  color: #fff;
  font-weight: bold;
  background: #11ab51;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: grab;
}

.c9 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c8 {
  overflow: hidden;
  height: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c12 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c14 {
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c17 {
  color: #c12c30;
  font-weight: bold;
  font-size: 19px;
  padding-bottom: 1px;
  padding-left: 4px;
  display: none;
}

.c15 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #4C4C4C;
  background-color: #fff;
  background-image: none;
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  padding: 1px 8px;
}

.c15:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  font-size: 14px;
  margin-bottom: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Edit Scan Config
              </span>
              <div
                class="c5 c6"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c7 c8"
            >
              <div
                class="c9"
                data-testid="save-dialog-content"
              >
                <div
                  class="c10"
                >
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                    >
                      <input
                        class="c15 c16"
                        name="name"
                        size="30"
                        type="text"
                        value="Config"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                    >
                      <input
                        class="c15 c16"
                        name="comment"
                        size="30"
                        type="text"
                        value="bar"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c18"
                    data-testid="inline-notification"
                  >
                    The scan config is currently in use by one or more tasks, therefore only name and comment can be modified.
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c19 c20 c21"
            >
              <button
                class="c22 c23 c24"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c22 c23 c24"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c25"
          >
            <div
              class="c26"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`EditScanConfigDialog component tests should render dialog inline notification for policy in use 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102, 102, 102, 0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c26 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c25 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient(     -45deg,     transparent,     transparent 2px,     #000 2px,     #000 3px   );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #7F7F7F;
  border-radius: 3px;
  border: 1px solid #7F7F7F;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #074320;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 :hover {
  border: 1px solid #074320;
}

.c6 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c6 * {
  height: inherit;
  width: inherit;
}

.c22 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c22:focus,
.c22:hover {
  border: 1px solid #4C4C4C;
}

.c22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c22[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c22 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c22:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  border: 1px solid #7F7F7F;
  color: #fff;
  background: #11ab51;
}

.c24 :hover {
  color: #074320;
  background: #A1DDBA;
}

.c20 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #e5e5e5;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
}

.c21 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #7F7F7F;
  color: #fff;
  font-weight: bold;
  background: #11ab51;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: grab;
}

.c9 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c8 {
  overflow: hidden;
  height: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  padding-bottom: 10px;
}

.c12 {
  display: inline-block;
  max-width: 100%;
  font-weight: bold;
  text-align: right;
  padding-left: 10px;
  padding-right: 10px;
  width: 16.66666667%;
  margin-left: 0;
}

.c14 {
  width: 83.33333333%;
  padding-left: 10px;
  padding-right: 10px;
}

.c17 {
  color: #c12c30;
  font-weight: bold;
  font-size: 19px;
  padding-bottom: 1px;
  padding-left: 4px;
  display: none;
}

.c15 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #4C4C4C;
  background-color: #fff;
  background-image: none;
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  padding: 1px 8px;
}

.c15:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  font-size: 14px;
  margin-bottom: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Edit Policy
              </span>
              <div
                class="c5 c6"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c7 c8"
            >
              <div
                class="c9"
                data-testid="save-dialog-content"
              >
                <div
                  class="c10"
                >
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Name
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                    >
                      <input
                        class="c15 c16"
                        name="name"
                        size="30"
                        type="text"
                        value="Policy"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <label
                      class="c12"
                      data-testid="formgroup-title"
                    >
                      Comment
                    </label>
                    <div
                      class="c13 c14"
                      data-testid="formgroup-content"
                    >
                      <input
                        class="c15 c16"
                        name="comment"
                        size="30"
                        type="text"
                        value="bar"
                      />
                      <div
                        class="c17"
                        data-testid="error-marker"
                      >
                        ×
                      </div>
                    </div>
                  </div>
                  <div
                    class="c18"
                    data-testid="inline-notification"
                  >
                    The policy is currently in use by one or more audits, therefore only name and comment can be modified.
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c19 c20 c21"
            >
              <button
                class="c22 c23 c24"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c22 c23 c24"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c25"
          >
            <div
              class="c26"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;
